--- a/src/layouts/PostSingle.astro
+++ b/src/layouts/PostSingle.astro
@@ -7,6 +7,7 @@ import dateFormat from "@/lib/utils/dateFormat";
 import similerItems from "@/lib/utils/similarItems";
 import { humanize, markdownify, slugify } from "@/lib/utils/textConverter";
 import { BiCalendarEdit, BiCategoryAlt } from "react-icons/bi";
+import config from "@/config/config.json";
 
 const posts = await getSinglePage("posts");
 const { post } = Astro.props;
@@ -33,7 +34,7 @@ const { title, description, categories, image, date, tags } = post.data;
                   categories.map((category: string, i: number) => (
                     <li class="inline-block">
                       <a
-                        href={`/categories/${slugify(category)}`}
+                        href={`${config.site.base_path}/categories/${slugify(category)}`}
                         class="mr-2 hover:text-primary font-medium"
                       >
                         {humanize(category)}
@@ -72,7 +73,7 @@ const { title, description, categories, image, date, tags } = post.data;
               tags.map((tag: string) => (
                 <li class="inline-block">
                   <a
-                    href={`/tags/${slugify(tag)}`}
+                    href={`${config.site.base_path}/tags/${slugify(tag)}`}
                     class="block rounded-lg bg-theme-light px-4 py-2 font-semibold text-dark text-sm hover:text-primary transition duration-300"
                   >
                     #{humanize(tag)}
