--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,5 +1,6 @@
 ---
 import Base from "@/layouts/Base.astro";
+import config from "@/config/config.json";
 import { getTaxonomy } from "@/lib/taxonomyParser.astro";
 import { humanize } from "@/lib/utils/textConverter";
 
@@ -17,7 +18,7 @@ const tags = await getTaxonomy("posts", "tags");
           tags.map((tag) => (
             <li class="inline-block">
               <a
-                href={`/tags/${tag}`}
+                href={`${config.site.base_path}/tags/${tag}`}
                 class="rounded-lg bg-theme-light px-4 py-2 text-dark transition hover:bg-primary hover:text-white flex items-center group"
               >
                 <FaHashtag className="mr-1 text-primary group-hover:text-white transition" />
